# kythia-workspace

./: .gitignore  CONTRIBUTING.md  README.md  components.json  index.html  package-lock.json  package.json  rename-builds.js  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  USAGE.md
src/: App.tsx  TrayApp.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  license.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  cache.rs  default_index.html  downloader.rs  env.rs  gamification.rs  hosts.rs  lib.rs  mailpit.rs  main.rs  mariadb.rs  mongodb.rs  mysql.rs  nginx.rs  ngrok.rs  packages.rs  php.rs  postgres.rs  projects.rs  redis.rs  settings.rs  sites.rs  state.rs  system.rs
src/components/: About.tsx  Achievements.tsx  Dashboard.tsx  DatabaseManager.tsx  GamificationBadge.tsx  Logs.tsx  Mail.tsx  MariaDb.tsx  Mongodb.tsx  Mysql.tsx  Nginx.tsx  Packages.tsx  Php.tsx  PhpConfig.tsx  Postgres.tsx  Profile.tsx  Projects.tsx  QuickApps.tsx  Redis.tsx  Settings.tsx  Shop.tsx  Sidebar.tsx  Sites.tsx
src/components/ui/: sonner.tsx
src/hooks/: useDownloadProgress.ts  useGamification.ts
src/lib/: achievements.ts  shop.ts  utils.ts
