[package]
name = "kythia-workspace"
version = "0.3.0"
description = "The next generation, ultra lightweight local development environment. A faster, native, and isolated alternative to Laragon, Xampp, or Laravel Herd"
authors = ["kenndeclouv"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kythia_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
regex = "1"
futures-util = "0.3"
winreg = "0.56.0"
tauri-plugin-autostart = "2.5.1"
base64 = "0.22.1"
chrono = "0.4.45"
tauri-plugin-notification = "2"
sysinfo = "0.39.5"

